--- a/sudokuX.vcxproj
+++ b/sudokuX.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="sources\create.cpp" />
     <ClCompile Include="sources\main.cpp" />
     <ClCompile Include="sources\print.cpp" />
+    <ClCompile Include="sources\scan.cpp" />
     <ClCompile Include="sources\sudoku.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
