--- a/sudokuX.vcxproj.filters
+++ b/sudokuX.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="sources\sudoku.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="sources\scan.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
