--- a/sudokuX.vcxproj.filters
+++ b/sudokuX.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="sources\scan.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="sources\menu.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
