--- a/sudokuX.vcxproj
+++ b/sudokuX.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="sources\check.cpp" />
     <ClCompile Include="sources\create.cpp" />
     <ClCompile Include="sources\main.cpp" />
+    <ClCompile Include="sources\menu.cpp" />
     <ClCompile Include="sources\print.cpp" />
     <ClCompile Include="sources\scan.cpp" />
     <ClCompile Include="sources\sudoku.cpp" />
